pkg/numaresourcesoperator/manifests/yaml/daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: resource-topology-exporter
spec:
  selector:
      matchLabels:
        name: resource-topology
  template:
    metadata:
      labels:
        name: resource-topology
    spec:
      readinessGates:
      - conditionType: "PodresourcesFetched"
      - conditionType: "NodeTopologyUpdated"
      serviceAccountName: rte
      priorityClassName: system-node-critical
      containers:
      - name: resource-topology-exporter
        image: quay.io/k8stopologyawareschedwg/resource-topology-exporter:latest
        command:
        - /bin/resource-topology-exporter
        args:
        - --sleep-interval=10s
        - --sysfs=/host-sys
        - --podresources-socket=unix:///host-podresources/kubelet.sock
        volumeMounts:
          - name: host-sys
            mountPath: "/host-sys"
            readOnly: true
          - name: host-podresources
            mountPath: "/host-podresources"
            readOnly: true
      - name: shared-pool-container
        image: gcr.io/google_containers/pause-amd64:3.0
      volumes:
      - name: host-sys
        hostPath:
          path: "/sys"
          type: Directory
      - name: host-podresources
        hostPath:
          path: "/var/lib/kubelet/pod-resources"
          type: Directory
