pkg/numaresourcesoperator/manifests/yaml/networkpolicy.apiserver.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: rte-egress-to-api-server
spec:
  podSelector:
    matchLabels:
      name: resource-topology
  egress:
  - ports:
    - protocol: TCP
      port: 6443 
  policyTypes:
  - Egress
