pkg/numaresourcesoperator/manifests/yaml/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: rte-default-deny-all
spec:
  podSelector:
    matchLabels:
      name: resource-topology
  policyTypes:
  - Ingress
  - Egress
